--- a/data_analyasis/EDA.ipynb
+++ b/data_analyasis/EDA.ipynb
@@ -32,7 +32,8 @@
       "已加载环境变量: TRAIN_LOG_PATH = /Users/lihangyu/Desktop/aigc/logs\n",
       "已加载环境变量: TRAIN_TF_EVENTS_PATH = /Users/lihangyu/Desktop/aigc/tensorboard_logs\n",
       "已加载环境变量: TRAIN_DATA_PATH = /Users/lihangyu/Desktop/aigc/TencentGR_1k\n",
-      "已加载环境变量: TRAIN_CKPT_PATH = /Users/lihangyu/Desktop/aigc/checkpoints\n"
+      "已加载环境变量: TRAIN_CKPT_PATH = /Users/lihangyu/Desktop/aigc/checkpoints\n",
+      "已加载环境变量: PYDEVD_WARN_SLOW_RESOLVE_TIMEOUT = 2\n"
      ]
     }
    ],
@@ -173,7 +174,10 @@
       "122        11151      1220100701      1220000014     \n",
       "\n",
       "feature_id=100对应的feature_value_indexer:\n",
-      "{1000000001: 1, 1000000005: 2, 1000000003: 3, 1000000002: 4, 1000000000: 5, 1000000004: 6}\n"
+      "{1000000001: 1, 1000000005: 2, 1000000003: 3, 1000000002: 4, 1000000000: 5, 1000000004: 6}\n",
+      "\n",
+      "feature_id=106对应的feature_value_indexer:\n",
+      "{1060000000: 1, 1060000007: 2, 1060000013: 3, 1060000006: 4, 1060000004: 5, 1060000010: 6, 1060000009: 7, 1060000001: 8, 1060000008: 9, 1060000011: 10, 1060000003: 11, 1060000012: 12, 1060000002: 13}\n"
      ]
     }
    ],
@@ -191,7 +195,10 @@
     "    print(f\"{feature_id:<10} {len(feature_value_indexer):<10} {max(feature_value_indexer):<15} {min(feature_value_indexer):<15}\")\n",
     "\n",
     "print('\\nfeature_id=100对应的feature_value_indexer:')\n",
-    "print(feature_value_indexers['100'])"
+    "print(feature_value_indexers['100'])\n",
+    "\n",
+    "print('\\nfeature_id=106对应的feature_value_indexer:')\n",
+    "print(feature_value_indexers['106'])"
    ]
   },
   {
@@ -424,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "058da1c1",
    "metadata": {},
    "outputs": [],
@@ -507,6 +514,165 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2c2fd8d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "找到第1个包含'106'特征的用户画像:\n",
+      "  用户ID: 640\n",
+      "  用户特征: {'103': 46, '106': [4], '109': 1, '105': 5, '104': 2}\n",
+      "  '106'特征值: [4]\n",
+      "  时间戳: 1748049465\n",
+      "  完整记录: [640, None, {'103': 46, '106': [4], '109': 1, '105': 5, '104': 2}, None, None, 1748049465]\n",
+      "--------------------------------------------------\n",
+      "找到第2个包含'106'特征的用户画像:\n",
+      "  用户ID: 800\n",
+      "  用户特征: {'109': 2, '104': 2, '103': 2, '106': [4]}\n",
+      "  '106'特征值: [4]\n",
+      "  时间戳: 1748043565\n",
+      "  完整记录: [800, None, {'109': 2, '104': 2, '103': 2, '106': [4]}, None, None, 1748043565]\n",
+      "--------------------------------------------------\n",
+      "找到第3个包含'106'特征的用户画像:\n",
+      "  用户ID: 320\n",
+      "  用户特征: {'103': 7, '106': [4], '109': 3, '105': 2, '104': 2}\n",
+      "  '106'特征值: [4]\n",
+      "  时间戳: 1748044759\n",
+      "  完整记录: [320, None, {'103': 7, '106': [4], '109': 3, '105': 2, '104': 2}, None, None, 1748044759]\n",
+      "--------------------------------------------------\n",
+      "找到第4个包含'106'特征的用户画像:\n",
+      "  用户ID: 480\n",
+      "  用户特征: {'103': 2, '110': [1], '106': [2, 6], '109': 3, '105': 2, '107': [4], '104': 2}\n",
+      "  '106'特征值: [2, 6]\n",
+      "  时间戳: 1748049270\n",
+      "  完整记录: [480, None, {'103': 2, '110': [1], '106': [2, 6], '109': 3, '105': 2, '107': [4], '104': 2}, None, None, 1748049270]\n",
+      "--------------------------------------------------\n",
+      "找到第5个包含'106'特征的用户画像:\n",
+      "  用户ID: 160\n",
+      "  用户特征: {'103': 55, '110': [1], '106': [4, 7, 3], '109': 1, '105': 2, '107': [2], '104': 1}\n",
+      "  '106'特征值: [4, 7, 3]\n",
+      "  时间戳: 1748052275\n",
+      "  完整记录: [160, None, {'103': 55, '110': [1], '106': [4, 7, 3], '109': 1, '105': 2, '107': [2], '104': 1}, None, None, 1748052275]\n",
+      "--------------------------------------------------\n",
+      "找到第6个包含'106'特征的用户画像:\n",
+      "  用户ID: 1\n",
+      "  用户特征: {'103': 58, '108': [2], '110': [2, 1], '106': [8, 11, 7], '109': 2, '105': 6, '107': [4], '104': 2}\n",
+      "  '106'特征值: [8, 11, 7]\n",
+      "  时间戳: 1748048944\n",
+      "  完整记录: [1, None, {'103': 58, '108': [2], '110': [2, 1], '106': [8, 11, 7], '109': 2, '105': 6, '107': [4], '104': 2}, None, None, 1748048944]\n",
+      "--------------------------------------------------\n",
+      "找到第7个包含'106'特征的用户画像:\n",
+      "  用户ID: 161\n",
+      "  用户特征: {'103': 34, '106': [4, 7], '109': 1, '105': 5, '104': 2}\n",
+      "  '106'特征值: [4, 7]\n",
+      "  时间戳: 1748048707\n",
+      "  完整记录: [161, None, {'103': 34, '106': [4, 7], '109': 1, '105': 5, '104': 2}, None, None, 1748048707]\n",
+      "--------------------------------------------------\n",
+      "找到第8个包含'106'特征的用户画像:\n",
+      "  用户ID: 321\n",
+      "  用户特征: {'103': 18, '110': [2], '106': [4, 7, 3, 10], '109': 2, '105': 7, '107': [2], '104': 2}\n",
+      "  '106'特征值: [4, 7, 3, 10]\n",
+      "  时间戳: 1748048062\n",
+      "  完整记录: [321, None, {'103': 18, '110': [2], '106': [4, 7, 3, 10], '109': 2, '105': 7, '107': [2], '104': 2}, None, None, 1748048062]\n",
+      "--------------------------------------------------\n",
+      "找到第9个包含'106'特征的用户画像:\n",
+      "  用户ID: 481\n",
+      "  用户特征: {'103': 53, '108': [3], '106': [6, 4, 3], '109': 3, '105': 5, '107': [13], '104': 2}\n",
+      "  '106'特征值: [6, 4, 3]\n",
+      "  时间戳: 1748047888\n",
+      "  完整记录: [481, None, {'103': 53, '108': [3], '106': [6, 4, 3], '109': 3, '105': 5, '107': [13], '104': 2}, None, None, 1748047888]\n",
+      "--------------------------------------------------\n",
+      "找到第10个包含'106'特征的用户画像:\n",
+      "  用户ID: 641\n",
+      "  用户特征: {'103': 67, '110': [2, 1], '106': [2], '109': 2, '105': 5, '107': [13], '104': 1}\n",
+      "  '106'特征值: [2]\n",
+      "  时间戳: 1748047387\n",
+      "  完整记录: [641, None, {'103': 67, '110': [2, 1], '106': [2], '109': 2, '105': 5, '107': [13], '104': 1}, None, None, 1748047387]\n",
+      "--------------------------------------------------\n",
+      "\n",
+      "=== 统计摘要 ===\n",
+      "总共找到 10 个包含'106'特征的用户画像\n",
+      "\n",
+      "=== '106'特征值分析 ===\n",
+      "'106'特征值类型: <class 'list'>\n",
+      "示例值: [[4], [4], [4], [2, 6], [4, 7, 3]]\n",
+      "列表长度统计:\n",
+      "  最小长度: 1\n",
+      "  最大长度: 4\n",
+      "  平均长度: 2.10\n",
+      "  中位数长度: 2.00\n",
+      "\n",
+      "前5个'106'特征详细内容:\n",
+      "  用户1: [4]\n",
+      "  用户2: [4]\n",
+      "  用户3: [4]\n",
+      "  用户4: [2, 6]\n",
+      "  用户5: [4, 7, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 找到10个包含'106'特征的user_feature记录\n",
+    "user_profiles_with_106 = []\n",
+    "count = 0\n",
+    "target_count = 10\n",
+    "\n",
+    "# 遍历所有用户序列\n",
+    "for user_seq in user_seqs:\n",
+    "    if count >= target_count:\n",
+    "        break\n",
+    "        \n",
+    "    for record in user_seq:\n",
+    "        user_id, item_id, user_feature, item_feature, action_type, timestamp = record\n",
+    "        \n",
+    "        # 判断是否为user profile记录\n",
+    "        if item_id is None and item_feature is None and action_type is None:\n",
+    "            # user profile: [user_id, None, user_feature, None, None, timestamp]\n",
+    "            if user_feature and '106' in user_feature:\n",
+    "                user_profiles_with_106.append(record)\n",
+    "                count += 1\n",
+    "                print(f\"找到第{count}个包含'106'特征的用户画像:\")\n",
+    "                print(f\"  用户ID: {user_id}\")\n",
+    "                print(f\"  用户特征: {user_feature}\")\n",
+    "                print(f\"  '106'特征值: {user_feature['106']}\")\n",
+    "                print(f\"  时间戳: {timestamp}\")\n",
+    "                print(f\"  完整记录: {record}\")\n",
+    "                print(\"-\" * 50)\n",
+    "                \n",
+    "                if count >= target_count:\n",
+    "                    break\n",
+    "\n",
+    "print(f\"\\n=== 统计摘要 ===\")\n",
+    "print(f\"总共找到 {len(user_profiles_with_106)} 个包含'106'特征的用户画像\")\n",
+    "\n",
+    "if user_profiles_with_106:\n",
+    "    print(f\"\\n=== '106'特征值分析 ===\")\n",
+    "    feature_106_values = [record[2]['106'] for record in user_profiles_with_106]\n",
+    "    \n",
+    "    # 分析'106'特征值的类型和分布\n",
+    "    print(f\"'106'特征值类型: {type(feature_106_values[0])}\")\n",
+    "    print(f\"示例值: {feature_106_values[:5]}\")\n",
+    "    \n",
+    "    # 如果是列表类型，分析列表长度\n",
+    "    if isinstance(feature_106_values[0], list):\n",
+    "        lengths = [len(val) for val in feature_106_values]\n",
+    "        print(f\"列表长度统计:\")\n",
+    "        print(f\"  最小长度: {min(lengths)}\")\n",
+    "        print(f\"  最大长度: {max(lengths)}\")\n",
+    "        print(f\"  平均长度: {np.mean(lengths):.2f}\")\n",
+    "        print(f\"  中位数长度: {np.median(lengths):.2f}\")\n",
+    "        \n",
+    "        # 展示前几个列表的详细内容\n",
+    "        print(f\"\\n前5个'106'特征详细内容:\")\n",
+    "        for i, val in enumerate(feature_106_values[:5]):\n",
+    "            print(f\"  用户{i+1}: {val}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0f8118c0",
    "metadata": {},
@@ -516,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "4aec2677",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1299,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/k6/h0tmlbzj09lg5twn9ctkrz540000gn/T/ipykernel_85566/1756558497.py:235: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "/var/folders/k6/h0tmlbzj09lg5twn9ctkrz540000gn/T/ipykernel_45937/1756558497.py:235: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  box_plot = ax9.boxplot(daily_distributions, labels=labels, patch_artist=True)\n"
      ]
     },
@@ -1852,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "f5261529",
    "metadata": {},
    "outputs": [
@@ -1968,7 +2134,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.11.13)",
    "language": "python",
    "name": "python3"
   },
