--- a/data_analyasis/EDA.ipynb
+++ b/data_analyasis/EDA.ipynb
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "058da1c1",
    "metadata": {},
    "outputs": [],
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "2c2fd8d9",
    "metadata": {},
    "outputs": [
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "4aec2677",
    "metadata": {},
    "outputs": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "e40d7a86",
    "metadata": {},
    "outputs": [
@@ -1273,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "4c2ee942",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1299,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/k6/h0tmlbzj09lg5twn9ctkrz540000gn/T/ipykernel_45937/1756558497.py:235: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "/var/folders/k6/h0tmlbzj09lg5twn9ctkrz540000gn/T/ipykernel_48207/1756558497.py:235: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  box_plot = ax9.boxplot(daily_distributions, labels=labels, patch_artist=True)\n"
      ]
     },
@@ -1800,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "71ba7870",
    "metadata": {},
    "outputs": [
@@ -2018,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "f5261529",
    "metadata": {},
    "outputs": [
@@ -2044,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "4dcc0980",
    "metadata": {},
    "outputs": [
@@ -2134,7 +2134,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.11.13)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
